mvc pattern updated

--- a/MembersApp/Views/Home/Index.cshtml
+++ b/MembersApp/Views/Home/Index.cshtml
@@ -1,13 +1,11 @@
-﻿@*@Model MembersApp.Models.Member
-
-@{
+﻿@{
     Layout = null;
-}*@
+}
 
 <!DOCTYPE html>
 <html>
 <head>
-    @*<meta charset="utf-8" name="viewport" content="width=device-width" />
+    <meta charset="utf-8" name="viewport" content="width=device-width" />
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
     <script type="text/javascript">
         var getMembers = function () {
@@ -34,7 +32,7 @@
         $(function () {
             getMembers();
         });
-    </script>*@
+    </script>
     <title>Index</title>
 </head>
 <body>
